[tool.poetry]
name = "carservices"
version = "0.2.0"
description = ""
authors = ["ricklon <rick.rickanderson@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.9"
picamera2 = "^0.3.3"
"RPi.GPIO" = "^0.7.1"
pyserial = "^3.5"



#numpy = "^1.21.1"
#[tool.poetry.dev-dependencies]
#pytest = "^5.2"

[tool.poetry.scripts]
car_runner = "carservices.carRunner:main"
test_pihat = "carservices.pihattest:main"
test_pihat_noterm = "carservices.pihattest_noterminal:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
